practice/section60/387/security_group.tf
resource "aws_security_group" "allow-levelup-ssh" {
    vpc_id = aws_vpc.levelupvpc.id
    name = "allow-levelup-ssh"
    description = "security group to allow ssh connection"

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "allow-levelup-ssh"
    }
}

resource "aws_security_group" "allow-mariadb" {
    vpc_id = aws_vpc.levelupvpc.id
    name = "allow-mariadb"
    description = "security group to allow mariadb"

    egress { 
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 3306
        to_port = 3306
        protocol = "tcp"
        security_groups = [aws_security_group.allow-levelup-ssh.id]
    }

    tags = {
        Name = "allow-mariadb"
    }
}
